test/decl/protocol/special/case_iterable/case_iterable_unsupported.code
// RUN: %target-language-frontend -typecheck -verify -primary-file %s %S/../Inputs/case_iterable_other.code -verify-additional-prefix unsupported- -verify-ignore-unknown

extension FromOtherFile: CaseIterable {} // expected-error {{extension outside of file declaring enum 'FromOtherFile' prevents automatic synthesis of 'allCases' for protocol 'CaseIterable'}} expected-note {{add stubs for conformance}}

enum NotCaseIterableAssociatedValues: CaseIterable { // expected-error {{type 'NotCaseIterableAssociatedValues' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a(Int)
  case b
}

// FIXME: [availability] Deprecation should not block this conformance synthesis
enum NotCaseIterableUniversallyDeprecatedCase: CaseIterable { // expected-error {{type 'NotCaseIterableUniversallyDeprecatedCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(*, deprecated)
  case b
}

enum NotCaseIterableUniversallyUnavailableCase: CaseIterable { // expected-error {{type 'NotCaseIterableUniversallyUnavailableCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(*, unavailable)
  case b
}

enum NotCaseIterableCodiraIntroducedLaterCase: CaseIterable { // expected-error {{type 'NotCaseIterableCodiraIntroducedLaterCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(language, introduced: 99)
  case b
}

enum NotCaseIterableCodiraIntroducedEarlierCase: CaseIterable { // expected-error {{type 'NotCaseIterableCodiraIntroducedEarlierCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(language, introduced: 4)
  case b
}

enum NotCaseIterableCodiraObsoletedLaterCase: CaseIterable { // expected-error {{type 'NotCaseIterableCodiraObsoletedLaterCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(language, obsoleted: 99)
  case b
}

enum NotCaseIterableCodiraObsoletedEarlierCase: CaseIterable { // expected-error {{type 'NotCaseIterableCodiraObsoletedEarlierCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(language, obsoleted: 4)
  case b
}

enum NotCaseIterableMacOSUnavailableCase: CaseIterable { // expected-error {{type 'NotCaseIterableMacOSUnavailableCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(macOS, unavailable)
  case b
}

enum NotCaseIterableMacOSPotentiallyUnavailableCase: CaseIterable { // expected-error {{type 'NotCaseIterableMacOSPotentiallyUnavailableCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(macOS, introduced: 99)
  case b
}

enum NotCaseIterableMacOSObsoletedCase: CaseIterable { // expected-error {{type 'NotCaseIterableMacOSObsoletedCase' does not conform to protocol 'CaseIterable'}}
  // expected-note@-1 {{add stubs for conformance}}
  case a
  @available(macOS, obsoleted: 10.9)
  case b
}
